--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@vueuse/core": "^12.8.2",
         "axios": "^1.7.9",
+        "chart.js": "^4.4.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-vue-next": "^0.468.0",
@@ -18,6 +19,7 @@
         "tailwind-merge": "^3.2.0",
         "tw-animate-css": "^1.4.0",
         "vue": "^3.5.13",
+        "vue-chartjs": "^5.2.0",
         "vue-input-otp": "^0.3.2",
         "vue-router": "^4.5.0"
     },
